style.css
/* GLOBAL */

* {
    box-sizing: border-box;
}

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    padding: 2em;
    font-family: Arial, Helvetica, sans-serif;
    color: #333
}

/* HEADING */
#progress-text {
    text-align: center;
    font-size: 5em;
}

/* BARS */

progress[value] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border: none;

    width: 100%;
    height: 2em;
    padding: 0.2em;
}

progress, progress[value]::-webkit-progress-bar {
    border-radius: 10em;
    background-color: #eee;
    overflow: hidden;
}

progress[value]::-webkit-progress-value {
    transition: width 1s;
    border-radius: 10em;
    background-color: #5db;
}

progress[value]::-moz-progress-bar {
    transition: width 1s;
    border-radius: 10em;
    background-color: #5db;
}

/* INPUTS */
input {
    outline: none;
    border: none;
    background: none;
    border-radius: 0;
    font-size: inherit;
    font-family: inherit;
    
    transition: border-color 0.5s;
    border-bottom: 1px solid #aaa;
}

input:focus {
    border-bottom:3px solid #5db;
}

input:invalid {
    border-bottom: 3px solid #f44;
}

/* DATE CONTROLS */

#range-controls {
    padding: 0.5em;
}

input[type="datetime-local"] {
    padding: 0;
}

input[type="datetime-local"]::-webkit-calendar-picker-indicator {
    margin: 0;
}

.float-right {
    float: right;
}

